src/modules/components/text-editor/functions/Prepare.scss
@import "../../../../Variables";

.p_editor {
  display: block;
  margin-top: 1em;
  margin-bottom: 1em;
  text-indent: 2em;
}

.h1_editor {
  display: block;
  font-size: 2em;
  margin-top: 0.67em;
  margin-bottom: 0.67em;
  font-weight: bold;
  font-family: inherit;
}

.h2_editor {
  display: block;
  font-size: 1.5em;
  margin-top: 0.83em;
  margin-bottom: 0.83em;
  font-weight: bold;
  font-family: inherit;
}

.h3_editor {
  display: block;
  font-size: 1.17em;
  margin-top: 1em;
  margin-bottom: 1em;
  font-weight: bold;
  font-family: inherit;
}

.h4_editor {
  display: block;
  margin-top: 1.33em;
  margin-bottom: 1.33em;
  font-weight: bold;
  font-family: inherit;
}

.h5_editor {
  display: block;
  font-size: 0.83em;
  margin-top: 1.67em;
  margin-bottom: 1.67em;
  font-weight: bold;
  font-family: inherit;
}

.h6_editor {
  display: block;
  font-size: 0.67em;
  margin-top: 2.33em;
  margin-bottom: 2.33em;
  font-weight: bold;
  font-family: inherit;
}

.code_editor {
  font-family: monospace;
  position: relative;

  &:after {
    content: "";
    position: absolute;
    left: -2px;
    top: -2px;
    right: -2px;
    bottom: -2px;
    border-radius: 2px;
    background: $site-color-5;
  }
}

.strong_editor {
  font-weight: bold;
}

.em_editor {
  font-style: italic;
}

.u_editor {
  text-decoration: underline;
}

.span_editor {
  font-size: inherit;
  font-family: inherit;
}

.a_editor {
  text-decoration: underline;
  cursor: pointer;
  color: $site-color-10;

  &:visited,
  &:active,
  &:hover {
    color: $site-color-10;
  }
}

.ol_editor {
  display: block;
  list-style-type: decimal;
  margin-top: 1em;
  margin-bottom: 1em;
  padding-left: 40px;
}

.ul_editor {
  display: block;
  list-style-type: disc;
  margin-top: 1em;
  margin-bottom: 1em;
  padding-left: 40px;
}

.li_editor {
  display: list-item;
  margin-bottom: 5px;
  line-height: 1.4;
}

.blockquote_editor {
  position: relative;
  margin-left: 40px;
  margin-right: 40px;
  line-height: 1.4;

  &:after {
    content: "";
    position: absolute;
    left: -26px;
    top: 0;
    height: 100%;
    width: 3px;
    background: $site-color-5;
  }
}

